[package]
name = "dibs-experiments"
version = "0.1.0"
authors = ["gaffneyk <kgaff33@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dibs = { path = "../dibs" }
rand = "0.7.3"
arrow = "2.0.0"
fnv = "1.0.7"
