[package]
name = "dibs-experiments"
version = "0.1.0"
authors = ["gaffneyk <kgaff33@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dibs = { path = "../dibs" }
rand = "0.7"
zipf = "6.1"
itertools = "0.9"
fnv = "1.0.7"
core_affinity = "0.5"
clap = "2.33"
arrow = "2.0"
rusqlite = "0.24"
mysql = "20.0"
odbc-sys = "0.17"

[build-dependencies]
cc = "1.0"
