[package]
name = "dibs-jni"
version = "0.1.0"
authors = ["gaffneyk <kgaff33@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dibs = { path = "../dibs" }
dibs-experiments = { path = "../experiments" }
jni = "0.18.0"
lazy_static = "1.4.0"

[lib]
crate-type = ["cdylib"]
